HTML for Pinterest

--- a/Pinterest/Pinterest.html
+++ b/Pinterest/Pinterest.html
@@ -1,1 +1,83 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <link rel="stylesheet" href="pinterest.css">
+</head>
+<body>
+    <header>
+        <button class="przycisk logo"><i class="fab fa-pinterest"></i></button>
+        <button class="strona-glowna">Strona główna</button>
+        <input type="text" name="search" id="search" placeholder="Szukaj">
+        <button class="przycisk dzwonek"><i class="fa-solid fa-bell"></i><span class="powiadomienia">99+</span></button>
+        <button class="przycisk"><i class="fa-solid fa-comment"></i></button>
+        <button class="przycisk przycisk-A">A</button>
+    </header>
+    <div class="container">
+        <span> Używamy plików cookie, aby wyświetlać spersonalizowane reklamy i treści oraz analizować ruch w naszej witrynie. Więcej informacji znajdziesz w naszym dokumencie <span class="zasady">Zasady dotyczące plików cookie.</span></span>
+        <button>Zaakceptuj wszystkie</button>
+        <button>Odrzuc wszystkie</button>
+        <button>Chce wybrac samodzielnie</button>
+    </div>
+    <div class="content">
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="column">
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+            <div class="pic"></div>
+        </div>
+        <div class="lastcolumn">
+            <button><i class="fa-solid fa-plus"></i></button>
+            <button><i class="fa-solid fa-question"></i></button>
+        </div>
+    </div>
+  
+</body>
+</html>
+
